<resources>
    <string name="app_name">PupusasYa!</string>
    <string name="bienvenida">Bienvenida</string>
    <string name="chat">Chat</string>
    <string name="inscripcion">Inscripcion</string>
    <string name="opciones">Opciones</string>
    <string name="salir">Salir</string>
    <string name="historial">Historial</string>
    <string name="pupuserias">Pupuserias</string>
    <string name="aplicacion">PupusasYa!</string>
    <string name="correo">pupusasya@codinginflow.com</string>
    <string name="abrir_navegacion"> Abrir navegacion</string>
    <string name="cerrar_navegacion"> Cerrar navegacion</string>
    <string name="title_activity_login_cli">LoginCli</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hintLoginUsu">Usuario</string>
    <string name="hintLogContr">Contraseña</string>
    <string name="etNames">Nombres</string>
    <string name="etLastNames">Apellidos</string>
    <string name="etEmail">Email (Opcional)</string>
    <string name="etAddress">Dirección</string>
    <string name="etPassword">Contraseña</string>
    <string name="etConfPassword">Confirmar Contraseña</string>
    <string name="btnSignUp">Registrarme</string>
    <string name="etUserName">Nombre de Usuario</string>
    <string name="tvSignUp">Registrarse</string>
    <string name="tvSignIn">Iniciar Sesión</string>
    <string name="etCellPhone">Celular</string>
    <string name="userName">Nombre de Usuario</string>
    <string name="etPhone">Teléfono (Opcional)</string>
    <string name="etPupuseriaName">Nombre Pupusería</string>
    <string name="agregar_produtos">agregar produtos</string>
    <string name="perfil">PERFIL</string>
    <string name="menu">Menu</string>
    <string name="nuevo_producto">NUEVO PRODUCTO</string>
    <string name="pupuseria">Pupuseria</string>
    <string name="tipoproducto">tipoProducto</string>
    <string name="nombreproducto">Nombre</string>
    <string name="precio">Precio</string>
    <string name="guardar">GUARDAR</string>
    <string name="direccion">Direccion</string>
    <string name="nombre">Nombre</string>
    <string name="nombredireccion">NombreDireccion</string>
    <string name="telefono">Telefono</string>
    <string name="nombretelefono">NombreTelefono</string>
    <string name="celular">Celular</string>
    <string name="nombrecelular">NombreCelular</string>
    <string name="email">Email</string>
    <string name="editar">Editar</string>
    <string name="codigo">Codigo</string>
    <string name="codigo_de_la_pupuseria">Codigo de la Pupuseria</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="actualizar">Actualizar</string>
    <string name="seleccionar_imagen">SELECCIONAR IMAGEN</string>
    <string name="producto">Producto</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="nombrePupuseria">Pupuseria</string>
    <string name="codigoPup">Codigo Pupuseria</string>
    <string name="btnTextAdd">Agregar</string>
</resources>
